v2.6.4.1 - Made autofit work in EDL timeline when switching images.
v2.6.4.0 - Added a starting audio volume preference to the default 
	   audio preferences.
	 - Made preferences run when the user hits ok.  Previously ok did
	   nothing.  This allows testing preferences much easier.
	 - Pixel Info is now available for background images even when those
	   background images have a different size than the foreground one.
	   Note that Color Info Selection shows only the foreground image 
	   values.
	 - Bug fixed file requester when clicking with rmb on a folder 
	   which would access the folder instead of the menus.
	 - EXR images with data windows are now saved keeping the data and
	   display window if saved as EXR.
	 - GUI for OpenEXR and ImageMagick image options.  Allows selecting
	   compression and pixel type.
v2.6.3.4 - Bug fixed thumbnails on sequences in file requester.
	 - Bug fixed some remote image problems including one incorrect 
	   log out.
	 - Made auto fitting when loading a new image, even if auto refit is
	   off.
	 - Fixed an obscure crash when changing reels.
	 - Added Color Info, Histogram and Vectorscope windows to the things
	   that can be opened and closed remotely.
	 - Updated selection to refresh color info, histogram and vectorscope.
	 - Made single images in EDL be able to play back as a sequence.
v2.6.3.3 - Bug fixed some DISPLAY environment variables that did not match the
	   documentation for them.
	 - Bug fixed an audio muting problem on some movies.  This was a 
	   regression bug not present in v2.6.1.0.
	 - Bug fixed preferences to always be saved in HOME/.filmaura
	   regardless of platform.
	   In the case of Windows, the path is %HOME%, or %USERPROFILE%, or
	   %HOMEDRIVE%\%HOMEPATH% searched in that order.
	 - Bug fixed drag and drop not centering the image loaded when
	   auto refit image was off.
	 - Bug fixed audio saving without pops, which was a regression bug
	   from v2.6.2.0.